# LiteIM

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  PROJECT_MEMORY.md  README.md  findings.md  progress.md  task_plan.md
bench/: Benchmark.cpp  Benchmark.hpp  CMakeLists.txt  liteim_bench.cpp
client_cli/: CMakeLists.txt  ClientCli.cpp  ClientCli.hpp  main.cpp
client_qt/: CMakeLists.txt
client_qt/include/liteim_client/: AuthController.hpp  ChatPage.hpp  ClientApp.hpp  ClientSession.hpp  ConversationListWidget.hpp  LoginWindow.hpp  MainWindow.hpp  PacketCodec.hpp  RegisterDialog.hpp  SideBar.hpp  TcpClient.hpp
client_qt/include/liteim_client/app/: ClientApp.hpp  ClientRuntime.hpp
client_qt/include/liteim_client/auth/: AuthController.hpp
client_qt/include/liteim_client/chat/: ChatController.hpp
client_qt/include/liteim_client/model/: ConversationModel.hpp
client_qt/include/liteim_client/network/: ClientSession.hpp  TcpClient.hpp
client_qt/include/liteim_client/protocol/: PacketCodec.hpp
client_qt/include/liteim_client/ui/: ChatInputBar.hpp  ChatPage.hpp  ContactListWidget.hpp  ConversationListWidget.hpp  LoginWindow.hpp  MainWindow.hpp  MessageBubble.hpp  RegisterDialog.hpp  SideBar.hpp
client_qt/resources/icons/: README.md
client_qt/resources/qss/: app.qss
client_qt/src/: AuthController.cpp  CMakeLists.txt  ChatPage.cpp  ClientApp.cpp  ClientSession.cpp  ConversationListWidget.cpp  LoginWindow.cpp  MainWindow.cpp  PacketCodec.cpp  RegisterDialog.cpp  SideBar.cpp  TcpClient.cpp  main.cpp
client_qt/src/app/: ClientApp.cpp  ClientRuntime.cpp
client_qt/src/auth/: AuthController.cpp
client_qt/src/chat/: ChatController.cpp
client_qt/src/model/: ConversationModel.cpp
client_qt/src/network/: ClientSession.cpp  TcpClient.cpp
client_qt/src/protocol/: PacketCodec.cpp
client_qt/src/ui/: ChatInputBar.cpp  ChatPage.cpp  ContactListWidget.cpp  ConversationListWidget.cpp  LoginWindow.cpp  MainWindow.cpp  MessageBubble.cpp  RegisterDialog.cpp  SideBar.cpp
client_qt/tests/: CMakeLists.txt  qt_client_test.cpp  qt_client_test_main.cpp
docker/: docker-compose.yml
docs/: architecture.md  database.md  interview_notes.md  project_layout.md  protocol.md  roadmap.md
scripts/: init_mysql.sql  seed_test_data.sql
server/: CMakeLists.txt  main.cpp
server/net/: Buffer.cpp  Channel.hpp  EventLoop.hpp  SocketUtil.cpp
server/protocol/: FrameDecoder.cpp  FrameDecoder.hpp  Packet.cpp  Packet.hpp
sql/: init.sql
src/: CMakeLists.txt
src/base/: CMakeLists.txt  Config.cpp  ErrorCode.cpp  Logger.cpp  Status.cpp  Timestamp.cpp
src/cache/: CMakeLists.txt  LoginRateLimiter.cpp  OnlineStatusCache.cpp  RedisCache.cpp  RedisClient.cpp  RedisPool.cpp  UnreadCounter.cpp
src/concurrency/: CMakeLists.txt  ThreadPool.cpp
src/net/: Acceptor.cpp  Buffer.cpp  CMakeLists.txt  Channel.cpp  Epoller.cpp  EventLoop.cpp  EventLoopThread.cpp  EventLoopThreadPool.cpp  Session.cpp  SignalWatcher.cpp  SocketUtil.cpp  TcpServer.cpp  UniqueFd.cpp
src/protocol/: CMakeLists.txt  FrameDecoder.cpp  MessageType.cpp  Packet.cpp  Tlv.cpp  TlvCodec.cpp
src/service/: AuthService.cpp  BotService.cpp  CMakeLists.txt  ChatService.cpp  FriendService.cpp  GroupService.cpp  HeartbeatService.cpp  HistoryService.cpp  MessagePacketBuilder.cpp  MessageRouter.cpp  OfflineMessageService.cpp  OnlineService.cpp  SessionManager.cpp
src/storage/: AuthDao.cpp  CMakeLists.txt  FriendDao.cpp  GroupDao.cpp  MessageDao.cpp  MySqlConnection.cpp  MySqlPool.cpp  MySqlStorage.cpp  NullCache.cpp  OfflineMessageDao.cpp  SQLiteStorage.cpp  UserDao.cpp
src/timer/: CMakeLists.txt  TimerHeap.cpp  TimerManager.cpp
tests/: CMakeLists.txt  TestUtil.hpp  ctest_gtest_labels.cmake  server_signal_shutdown_test.sh  test_acceptor.cpp  test_buffer.cpp  test_channel.cpp  test_epoller.cpp  test_event_loop.cpp  test_frame_decoder.cpp  test_main.cpp  test_message_router.cpp  test_protocol.cpp  test_reactor_interfaces.cpp  test_session.cpp  test_smoke.cpp  test_socket_util.cpp  test_sqlite_storage.cpp  test_storage_interfaces.cpp  test_tcp_server.cpp
tests/base/: config_test.cpp  error_code_test.cpp  logger_test.cpp  timestamp_test.cpp
tests/bench/: benchmark_test.cpp
tests/cache/: cache_interface_test.cpp  online_status_cache_test.cpp  redis_cache_test.cpp  redis_client_pool_test.cpp  unread_login_cache_test.cpp
tests/client_cli/: cli_protocol_test.cpp
tests/cmake/: qt_client_foundation_test.sh
tests/concurrency/: thread_pool_header_test.cpp  thread_pool_test.cpp
tests/e2e/: liteim_e2e.py  test_auth.py  test_backpressure.py  test_bot.py  test_group_chat.py  test_heartbeat.py  test_offline.py  test_private_chat.py
tests/mocks/: MockCache.hpp  MockStorage.hpp
tests/net/: acceptor_header_test.cpp  acceptor_test.cpp  buffer_test.cpp  channel_header_test.cpp  channel_test.cpp  epoller_header_test.cpp  epoller_test.cpp  event_loop_header_test.cpp  event_loop_test.cpp  event_loop_thread_header_test.cpp  event_loop_thread_pool_header_test.cpp  event_loop_thread_pool_test.cpp  event_loop_thread_test.cpp  session_header_test.cpp  session_test.cpp  signal_watcher_header_test.cpp  signal_watcher_test.cpp  socket_util_test.cpp  tcp_server_header_test.cpp  tcp_server_test.cpp  unique_fd_test.cpp
tests/protocol/: byte_order_test.cpp  frame_decoder_test.cpp  message_type_test.cpp  packet_test.cpp  tlv_codec_test.cpp  tlv_type_test.cpp
tests/service/: auth_service_test.cpp  bot_service_test.cpp  chat_service_test.cpp  friend_service_test.cpp  group_service_test.cpp  heartbeat_service_test.cpp  history_service_test.cpp  message_router_test.cpp  offline_message_service_test.cpp  online_service_test.cpp  service_mock_boundary_test.cpp  session_manager_test.cpp
tests/storage/: friend_group_dao_test.cpp  message_dao_test.cpp  mysql_connection_test.cpp  mysql_pool_test.cpp  mysql_storage_test.cpp  storage_interface_test.cpp  user_dao_test.cpp
tests/timer/: timer_heap_header_test.cpp  timer_heap_test.cpp  timer_manager_header_test.cpp  timer_manager_test.cpp
tutorials/: 00_roadmap.md  README.md  step00_reset.md  (+58 more)
(+138 files in other folders)
